alignment/corrections

--- a/mystyle.css
+++ b/mystyle.css
@@ -20,10 +20,6 @@ body {
 }
 
 .splash_header {
-    width: 100%; /* Change to 100% to fill the available width */
-    margin: 30px auto 0;
-    font-size: 50px;
-    font-weight: bolder;
     text-align: center;
 }
 
@@ -82,4 +78,8 @@ address {
   text-align: center;
   margin: 5px auto;
   font-size: 15px;
+}
+
+footer {
+    text-align: center;
 }
